--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@emotion/eslint-plugin": "^11.11.0",
     "@ladle/react": "^4.0.2",
     "@tanstack/eslint-plugin-query": "^5.20.1",
+    "@testing-library/cypress": "^10.0.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^14.2.1",
     "@types/jest": "^29.5.12",
@@ -46,7 +47,9 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "cypress": "^13.7.2",
     "eslint": "^8.56.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
