--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
     "@vitejs/plugin-react-swc": "^3.5.0",
+    "@vitest/coverage-v8": "^1.5.0",
     "cypress": "^13.7.2",
     "eslint": "^8.56.0",
     "eslint-plugin-cypress": "^2.15.1",
